# tg-shop-engine

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
bot/: main.py  setup.py
bot/handlers/: __init__.py  cart.py  catalog.py  checkout.py  order_status.py  payment.py  start.py
bot/keyboards/: cart.py  catalog.py  checkout.py
bot/middlewares/: throttling.py
bot/services/: notification.py
bot/states/: __init__.py  checkout.py
core/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
payments/: __init__.py  admin.py  models.py  services.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_payment_provider_payment_id.py  0003_alter_payment_options.py  __init__.py
shop/: __init__.py  admin.py  models.py
shop/migrations/: 0001_initial.py  0002_order_orderitem.py  0003_promo_code_and_usage.py  0004_alter_order_note_alter_order_payment_method_and_more.py  0005_alter_orderitem_options_alter_promocode_options_and_more.py  __init__.py
shop/services/: address.py  order.py  promo.py
shop/templates/admin/: analytics.html
tests/: conftest.py  factories.py
tests/integration/: test_checkout_flow.py  test_payment_flow.py  test_webhook.py
tests/unit/: test_address_service.py  test_admin.py  test_models.py  test_order_service.py  test_order_status.py  test_payment_service.py  test_promo_service.py
