[project]
name = "tg-shop-engine"
version = "0.1.0"
description = "Telegram e-commerce bot engine for Russian market (MVP)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "tg-shop-engine", email = "dev@tg-shop-engine.local"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "aiogram>=3.0,<4",           # Telegram bot framework
    "Django>=5.0,<6",            # Web framework and ORM
    "yookassa>=3.0,<4",          # YooKassa payment SDK
    "httpx>=0.27,<1",            # HTTP client for DaData
    "Pillow>=10.0,<13",          # Image processing
    "structlog>=24.1,<27",       # Structured logging (CalVer: YY.M)
    "psycopg[binary]>=3.1.12,<4",  # PostgreSQL adapter (v3, Django 5.x preferred)
    "redis>=5.0,<8",              # Redis client for FSM cache
]

[dependency-groups]
test = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=1.0,<2",
    "pytest-django>=4.7,<5",
    "factory-boy>=3.3,<4",
    "pytest-cov>=6.0,<8",
]

dev = [
    {include-group = "test"},
    "ruff>=0.15,<1",
    "mypy>=1.10,<2",
    "django-stubs>=5.0,<6",
]

[tool.uv]
default-groups = ["dev"]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 79
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "*/migrations/*",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "DJ",   # flake8-django
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
per-file-ignores = {"bot/main.py" = ["E402"], "tests/**" = ["S101"]}

[tool.ruff.lint.isort]
known-first-party = ["bot", "core", "shop", "payments", "delivery", "webapp", "tests"]
known-third-party = ["aiogram", "django", "yookassa", "httpx", "PIL", "redis"]
default-section = "third-party"
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
no_implicit_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
files = ["bot", "core", "shop", "payments"]
exclude = [".*/migrations/.*", ".*/tests/.*", "__pycache__", ".mypy_cache", ".venv"]

[tool.django-stubs]
django_settings_module = "core.settings"

[[tool.mypy.overrides]]
module = "aiogram.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yookassa.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true
